ChangeLog for herdstat

2005-05-08 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in: A few small changes to the description. Added
	another example.
	* src/action_stats_handler.cc: Initial value of smallest_herd should
	be 1.
	* src/xml.hh: Added handler() member func for returning a pointer to
	the _handler member for use by users who don't want to create a
	sub-class of xml_T.
	* src/herds_xml_handler.cc, src/herds_xml_handler.hh: Added
	mpXMLHandler_T XML handler class for parsing XML files listed in
	herds.xml <maintainingproject> elements.  HerdsXMLHandler_T will now
	parse said file for developer information, then fill the herds member
	like it normally would.
	* lib/misc.hh: Updated fetch() prototypes so third arg (verbose)
	defaults to false.

2005-05-07 Aaron Walker <ka0ttic@gentoo.org>

	* src/metadata_xml_handler.cc: Don't append if @gentoo.org if the
	domain is not @gentoo.org to maintainer email.
	* src/action_pkg_handler.cc: Fixed a couple bugs; one where the first
	package would still be displayed in color if --nocolor was specified.
	The second one involved the longdesc not being displayed when
	--verbose is used.
	* src/herds_xml.cc, src/herds_xml.hh: Don't call fetch() and parse()
	from init() and have callers call it manually.  Otherwise, it'll be
	fetched/parsed on each action_herds_xml_handler_T instantiation.
	* src/action_dev_handler.cc, src/action_herd_handler.cc,
	src/action_pkg_handler.cc, src/action_stats_handler.cc: Update to call
	herds_xml_T::{fetch,parse}() at the beginning of operator().

2005-05-06 Aaron Walker <ka0ttic@gentoo.org>

	* src/metadata_xml.cc: Moved herd_exists and dev_exists bodies here.

2005-05-05 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml.cc, src/herds_xml.hh: Added a devinfo_T structure for
	storing herds devs belong to, name, etc.  Added get_dev_info() member
	that returns a devinfo_T object.
	* src/metadata_xml.hh: Added member functions dev_exists and