@@ -3,11 +3,11 @@
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1115602749">
-        Check if a category is specified with --regex whether it searches the whole tree or not
-    </note>
     <note priority="medium" time="1115611204">
         Setup --timer to work with package searches
+        <note priority="high" time="1115636649">
+            Possibly pass a timer_T pointer (defaulting to NULL)
+        </note>
     </note>
     <note priority="verylow" time="1115448993">
         Instead of having -D print debug messages to stdout, maybe have it dump it all to ./herdstat.debug
